{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 151,
  "lineage": "0ee3a78f-04f2-b181-c863-192bed18d97f",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-03-08T12:20:29.596-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/calcium-field-306715/global/firewalls/yuvicloud-dev-fw-allow-http",
            "log_config": [],
            "name": "yuvicloud-dev-fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/calcium-field-306715/global/networks/yuvicloud-dev-vpc",
            "priority": 1000,
            "project": "calcium-field-306715",
            "self_link": "https://www.googleapis.com/compute/v1/projects/calcium-field-306715/global/firewalls/yuvicloud-dev-fw-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-03-08T12:20:29.534-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/calcium-field-306715/global/firewalls/yuvicloud-dev-fw-allow-https",
            "log_config": [],
            "name": "yuvicloud-dev-fw-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/calcium-field-306715/global/networks/yuvicloud-dev-vpc",
            "priority": 1000,
            "project": "calcium-field-306715",
            "self_link": "https://www.googleapis.com/compute/v1/projects/calcium-field-306715/global/firewalls/yuvicloud-dev-fw-allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "https"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-03-08T12:20:29.572-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/calcium-field-306715/global/firewalls/yuvicloud-dev-fw-allow-internal",
            "log_config": [],
            "name": "yuvicloud-dev-fw-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/calcium-field-306715/global/networks/yuvicloud-dev-vpc",
            "priority": 1000,
            "project": "calcium-field-306715",
            "self_link": "https://www.googleapis.com/compute/v1/projects/calcium-field-306715/global/firewalls/yuvicloud-dev-fw-allow-internal",
            "source_ranges": [
              "10.142.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-03-08T12:20:29.296-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/calcium-field-306715/global/firewalls/yuvicloud-dev-fw-allow-ssh",
            "log_config": [],
            "name": "yuvicloud-dev-fw-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/calcium-field-306715/global/networks/yuvicloud-dev-vpc",
            "priority": 1000,
            "project": "calcium-field-306715",
            "self_link": "https://www.googleapis.com/compute/v1/projects/calcium-field-306715/global/firewalls/yuvicloud-dev-fw-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20210224",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/calcium-field-306715/zones/us-east1-b/disks/yuvicloud-dev-vm-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "hostname": "yuvicloud-vm-yuvicloud.com",
            "id": "projects/calcium-field-306715/zones/us-east1-b/instances/yuvicloud-dev-vm-0",
            "instance_id": "5077083163087026679",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQC/SRENRROQZZTMziQJiPPGOzyAMXvFpJ7iHYYwyrTplcFGlW9Lto68SHUGqsw72LWe0K7DEeGqf7TGkFxgnbpvvEdrQC4o+unB9ACimGShQO7o5aZpJpN5OLWXwD8ebIuLeUrrhf7PHxCMwipHo47+sRsTW1MsarpkV6pJiupXOcpUEemfEvvZW3THrOMR6WYwFjCcv+NVWvDZPdX7+LWo5LYHBnYHVxfFX0L9LhSDboz41R7wOBn5qtgmhueQfoc2EIahsMwBA/0SZxEAlKE/VReGK5b/CigjMFQ/444vKwa7vmfSSmpJ/99BIhEylkvoSI7/VUuHLwung5N4pqbF yuvarajjaganathan@Yuvarajs-MBP\n"
            },
            "metadata_fingerprint": "r9F6BLMunK8=",
            "metadata_startup_script": "apt-get update; apt-get install -yq default-jdk docker*; systemctl start docker",
            "name": "yuvicloud-dev-vm-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.196.106.200",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/calcium-field-306715/global/networks/yuvicloud-dev-vpc",
                "network_ip": "10.142.1.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/calcium-field-306715/regions/us-east1/subnetworks/yuvicloud-dev-public-subnet-1",
                "subnetwork_project": "calcium-field-306715"
              }
            ],
            "project": "calcium-field-306715",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/calcium-field-306715/zones/us-east1-b/instances/yuvicloud-dev-vm-0",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http",
              "ssh"
            ],
            "tags_fingerprint": "7XLBdwIeS7E=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.public_subnet_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20210224",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/calcium-field-306715/zones/us-east1-b/disks/yuvicloud-dev-vm-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "hostname": "yuvicloud-vm-yuvicloud.com",
            "id": "projects/calcium-field-306715/zones/us-east1-b/instances/yuvicloud-dev-vm-1",
            "instance_id": "5478866414346123767",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQC/SRENRROQZZTMziQJiPPGOzyAMXvFpJ7iHYYwyrTplcFGlW9Lto68SHUGqsw72LWe0K7DEeGqf7TGkFxgnbpvvEdrQC4o+unB9ACimGShQO7o5aZpJpN5OLWXwD8ebIuLeUrrhf7PHxCMwipHo47+sRsTW1MsarpkV6pJiupXOcpUEemfEvvZW3THrOMR6WYwFjCcv+NVWvDZPdX7+LWo5LYHBnYHVxfFX0L9LhSDboz41R7wOBn5qtgmhueQfoc2EIahsMwBA/0SZxEAlKE/VReGK5b/CigjMFQ/444vKwa7vmfSSmpJ/99BIhEylkvoSI7/VUuHLwung5N4pqbF yuvarajjaganathan@Yuvarajs-MBP\n"
            },
            "metadata_fingerprint": "r9F6BLMunK8=",
            "metadata_startup_script": "apt-get update; apt-get install -yq default-jdk docker*; systemctl start docker",
            "name": "yuvicloud-dev-vm-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.231.1.50",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/calcium-field-306715/global/networks/yuvicloud-dev-vpc",
                "network_ip": "10.142.1.3",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/calcium-field-306715/regions/us-east1/subnetworks/yuvicloud-dev-public-subnet-1",
                "subnetwork_project": "calcium-field-306715"
              }
            ],
            "project": "calcium-field-306715",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/calcium-field-306715/zones/us-east1-b/instances/yuvicloud-dev-vm-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http",
              "ssh"
            ],
            "tags_fingerprint": "7XLBdwIeS7E=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.public_subnet_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/calcium-field-306715/global/networks/yuvicloud-dev-vpc",
            "mtu": 0,
            "name": "yuvicloud-dev-vpc",
            "project": "calcium-field-306715",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/calcium-field-306715/global/networks/yuvicloud-dev-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-03-08T12:20:29.388-08:00",
            "gateway_address": "10.142.1.1",
            "id": "projects/calcium-field-306715/regions/us-east1/subnetworks/yuvicloud-dev-public-subnet-1",
            "ip_cidr_range": "10.142.1.0/24",
            "name": "yuvicloud-dev-public-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/calcium-field-306715/global/networks/yuvicloud-dev-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "calcium-field-306715",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/calcium-field-306715/regions/us-east1/subnetworks/yuvicloud-dev-public-subnet-1"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}